2009-08-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	  Properly deserialize properties with dots in the name.

2009-08-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectReference.cs: Added a protected
	  member to be used by custom reference implementations to
	  initialize the reference.

	* md1format.xml: Fix md1 format mappings. A member has
	  changed.

2009-08-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.csproj:
	* MonoDevelop.Projects/Project.cs:
	* MonoDevelop.Projects/ProjectFile.cs:
	* MonoDevelop.Projects/ProjectEventArgs.cs: Rewritten gpl
	  code. Patch by Viktoria Dudka.

2009-08-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.csproj:
	* MonoDevelop.Projects.addin.xml:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProject.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	* MonoDevelop.Projects.Formats.MSBuild/IMSBuildImportProvider.cs:
	  Added extension point for Import providers, which can inject
	  custom import items in msbuild files.

2009-08-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/WorkspaceItem.cs:
	* MonoDevelop.Projects/ProjectReference.cs: Updated license
	  headers. Those files have been rewritten.

2009-08-18  Viktoria Dudka  <viktoriad@remobjects.com>

	* MonoDevelop.Projects/DotNetProject.cs: Rewritten GPL parts.

2009-08-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Fixed
	  a bug that happens when the parser returns null (happens for
	  the delphi parser).

2009-08-18  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
	  Regen assembly databases for packages when the assembly file
	  changes, instead of when the package version changes. Add an
	  env var flag, MD_ASM_DB_UPDATE_POLICY=PKGVERSION, for